validaciones de reg solicitud e interfaz de contratacion